--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,43 @@
 PORT=5000
-ADMIN_JWT_SECRET=your_admin_jwt_secret_here
-DB_FILE=./softpro9.db
+NODE_ENV=development
 
-# If you want to create admin accounts via the registration route, set a creation key
-# Use the same value in requests to `POST /api/auth/register` as `adminKey` when role='admin'
+# ========== CRITICAL: Configure in .env (NEVER commit) ==========
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
+# Email OAuth2 Configuration (Gmail)
+EMAIL_OAUTH_CLIENT_ID=your_email_oauth_client_id_here
+EMAIL_OAUTH_CLIENT_SECRET=your_email_oauth_client_secret_here
+EMAIL_OAUTH_REFRESH_TOKEN=your_email_oauth_refresh_token_here
+EMAIL_OAUTH_REDIRECT_URL=http://localhost:5000/student/auth/google/callback
+
+# Email SMTP Configuration (Optional - for testing)
+EMAIL_FROM=your_email@gmail.com
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password_here
+
+# reCAPTCHA Keys (https://www.google.com/recaptcha/admin)
+RECAPTCHA_SECRET=your_recaptcha_secret_here
+REACT_APP_RECAPTCHA_SITE_KEY=your_recaptcha_site_key_here
+
+# JWT Secret for Admin Authentication
+ADMIN_JWT_SECRET=your_admin_jwt_secret_here
 ADMIN_CREATE_KEY=your_admin_create_key_here
 
-# Example: Set allowed origins if you want to lock down CORS
-# ALLOWED_ORIGINS=http://localhost:3000,https://your-frontend.vercel.app
+# URLs
+FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:5000
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+
+# Admin Email Configuration
+ADMIN_EMAIL=admin@softpro9.com
+ADMIN_TOKEN=your_admin_token_here
+
+# Database File (SQLite)
+DB_FILE=./softpro9.db
+
+# JWT Secret for Student Authentication
+STUDENT_JWT_SECRET=your_student_jwt_secret_here
+
