--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
     name: softpro9-backend
     env: node
     plan: free
-    buildCommand: npm install --legacy-peer-deps
+    buildCommand: npm install --legacy-peer-deps --build-from-source
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         value: 5000
+      - key: NPM_CONFIG_BUILD_FROM_SOURCE
+        value: "true"
