--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,10 @@ services:
     name: softpro9-backend
     env: node
     plan: free
-    buildCommand: npm install --legacy-peer-deps --build-from-source
+    buildCommand: rm -rf node_modules package-lock.json; npm install
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         value: 5000
-      - key: NPM_CONFIG_BUILD_FROM_SOURCE
-        value: "true"
