--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
     "slugify": "^1.6.6",
-    "sqlite3": "^5.1.7",
     "textract": "^2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sqlite3": "^5.1.7"
   },
   "engines": {
     "node": "20.x"
   }
 }
+
