--- a/render.yaml
+++ b/render.yaml
@@ -12,3 +12,7 @@ services:
         value: 5000
       - key: NODE_VERSION
         value: 20
+      - key: DATABASE_URL
+        fromDatabase:
+          name: softpro9-db
+          property: connectionString
