fix(db): add runtime DB logs, .env.example and sqlite->postgres migration script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "migrate:sqlite2pg": "node scripts/migrate_sqlite_to_postgres.js"
   },
   "keywords": [],
   "author": "",
