--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,24 @@
+### Example environment variables for Softpro9 backend
+# PostgreSQL (production)
+# Either set a single DATABASE_URL or individual PG* variables
+DATABASE_URL=postgres://user:password@host:5432/softpro9_db
+PGHOST=localhost
+PGUSER=softpro9_user
+PGPASSWORD=your_password_here
+PGDATABASE=softpro9_db
+PGPORT=5432
+
+# SQLite (local development)
+# Point to your sqlite file (default used by app is ./database.sqlite)
+SQLITE_PATH=./database.sqlite
+DB_FILE=./database.sqlite
+
+# Other options
+NODE_ENV=development
+DB_MAX_RETRIES=10
+DB_RETRY_DELAY_MS=2000
+
+# NOTE: Do NOT commit real credentials. Use this file as an example only.
 PORT=5000
 NODE_ENV=development
 
